Closed
Bug 97563
Opened 24 years ago
Closed 24 years ago
HANG while printing a page with a plugin
Categories
(Core :: Printing: Output, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: peterlubczynski-bugs, Assigned: peterlubczynski-bugs)
References
()
Details
(Keywords: testcase, topembed)
Attachments
(2 files)
|
298 bytes,
text/html
|
Details | |
|
1.19 KB,
patch
|
attinasi
:
superreview+
asa
:
approval+
|
Details | Diff | Splinter Review |
See Bugscape bug: http://bugscape.netscape.com/show_bug.cgi?id=8554
So far, I've found these sites cause Mozilla (oddly not MFCEmbed or viewer???)
and the product mentioned in the bugscape bug to hang while printing:
http://www.disney.com
http://www.macromedia.com
http://www.emailtrack.com
I'm sure there are MANY others, too.
If someone could attach a simplified HTML testcase, that would be greatly be
appreciated.
I think this may be a layout problem. In a debug build, I get an endless loop of
ASSERTIONs in nsBlockFrame.cpp, "redo line on totally empty line:
'aState.IsImpactedByFloater()'"
| Assignee | ||
Comment 1•24 years ago
|
||
adding topembed keyword per Marek's request.
| Assignee | ||
Comment 2•24 years ago
|
||
Karnaze, I think this is your bug and I have a TESTCASE for you!
If you have a plugin inside a table, we ASSERT forever in debug mode and hang in
release while printing. The simple markup that causes this is:
<table width="300" border="1">
<tr>
<td><embed
src="http://www.macromedia.com/shockwave/download/triggerpages/flash.swf"
type="application/x-shockwave-flash" width=300 height=120>
</embed>
</td>
</tr>
</table>
Assignee: peterlubczynski → karnaze
Status: ASSIGNED → NEW
Keywords: testcase
Summary: HANG while printing some top100 plugin sites → HANG while printing a page with a plugin inside a simple table
| Assignee | ||
Comment 3•24 years ago
|
||
Comment 4•24 years ago
|
||
waterson, I'm seeing the assertions in the block code as well, but only in
mozilla. Changing the milestone to m0.9.5, since it is unlikely to get fixed in
time for m0.9.4.
Assignee: karnaze → waterson
Target Milestone: mozilla0.9.4 → mozilla0.9.5
| Assignee | ||
Comment 5•24 years ago
|
||
I have a fix, back over to me. We weren't setting the reflow status to
NS_FRAME_COMPLETE only in the printing case. Patch on its way.
Assignee: waterson → peterlubczynski
Keywords: patch
Summary: HANG while printing a page with a plugin inside a simple table → HANG while printing a page with a plugin
Whiteboard: [fix-in-hand]
Target Milestone: mozilla0.9.5 → mozilla0.9.4
| Assignee | ||
Comment 6•24 years ago
|
||
Comment on attachment 48240 [details] [diff] [review]
patch to set reflow status when printing
r=av
Comment 8•24 years ago
|
||
Comment on attachment 48240 [details] [diff] [review]
patch to set reflow status when printing
cool Peter! sr=attinasi
Attachment #48240 -
Flags: superreview+
| Assignee | ||
Comment 9•24 years ago
|
||
Checked into the trunk and mozilla0.9.2 branch as I think if I understand
correctly, at this time I don't need approvals because the trunk is open and
this is marked topembed.
However, I think I still need approval for the the mozilla0.9.4 trunk so I'm
leaving this open.
Status: NEW → ASSIGNED
Whiteboard: [fix-in-hand] → [SEEKING APPROVAL FOR 0.9.4 BRANCH][patch in trunk & 0.9.2 branch]
Comment 10•24 years ago
|
||
Comment on attachment 48240 [details] [diff] [review]
patch to set reflow status when printing
a=asa for checkin to Mozilla 0.9.4 branch
Attachment #48240 -
Flags: approval+
| Assignee | ||
Comment 11•24 years ago
|
||
Thanks! Checked into mozilla0.9.4 branch, marking FIXED.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: [SEEKING APPROVAL FOR 0.9.4 BRANCH][patch in trunk & 0.9.2 branch]
Comment 12•24 years ago
|
||
Okay I installed the 9/5 trunk build on windows.
now we don't hang..
however, I get blank pages when I print out the emailtrack.com
and macromedia websites...this is expected behavior?
for the disney.com website the middle of the page comes out
blank. but the top and bottom content print out fine.
Comment 13•24 years ago
|
||
okay the issue with plugins not printing is bug 27478.
Thus, this bug can be closed because we don't hang anymore
when printing a page with plugins.
verified in 9/5 trunk build.
Status: RESOLVED → VERIFIED
Comment 14•24 years ago
|
||
*** Bug 97154 has been marked as a duplicate of this bug. ***
You need to log in
before you can comment on or make changes to this bug.
Description
•