Fix for not setting reflow state on object frame in printing case bug 97563 r=av sr=attinasi